--- a/skeletor/gameshop/templates/gameshop/add_game.html
+++ b/skeletor/gameshop/templates/gameshop/add_game.html
@@ -13,9 +13,9 @@ Game settings
                 {% for field in form %}
                 <div class="form-group">
                     {{ field.label_tag }}
-                    <div class="controls">
+                    <span class="controls">
                         {{ field }}
-                    </div>
+                    </span>
                 </div>
                 {% endfor %}
                 <div class="form-group" style="padding:10px;">
