--- a/skeletor/gameshop/templates/gameshop/register.html
+++ b/skeletor/gameshop/templates/gameshop/register.html
@@ -1,9 +1,8 @@
-
 {% extends "base.html" %}
 {% load staticfiles %}
 
 {% block title %}
-Register page
+Register
 {% endblock %}
 
 
@@ -16,9 +15,9 @@ Register page
             {% for field in form %}
             <div class="form-group">
                 {{ field.label_tag }}
-                <div class="controls">
+                <span class="controls">
                     {{ field }}
-                </div>
+                </span>
             </div>
             {% endfor %}
             <div class="form-group" style="padding:10px;">
