--- a/skeletor/gameshop/templates/registration/login.html
+++ b/skeletor/gameshop/templates/registration/login.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+Login
+{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
