--- a/skeletor/gameshop/templates/gameshop/game_statistics.html
+++ b/skeletor/gameshop/templates/gameshop/game_statistics.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
+Statistics of {{ game.name }}
 {% endblock %}
 
 {% block navigation %}
@@ -10,8 +11,26 @@
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
-	{% for stat in statistics %}
-	{{stat.game.name}} - {{stat.gamePrice}} - {{stat.timeBought}}<br>
-	{% endfor %}
+    <h1>Selling log of {{ game.name }}</h1>
+    <div class="col-md-4 col-md-offset-4">
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Price</th>
+                        <th>Time</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for stat in statistics %}
+                    <tr>
+                        <td>{{ stat.gamePrice }}€</td>
+                        <td>{{ stat.timeBought }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 {% endblock %}
