--- a/skeletor/gameshop/templates/gameshop/verify.html
+++ b/skeletor/gameshop/templates/gameshop/verify.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block title %}
+Verify Email
+{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-1 text-center">
